resolved overflow issue on mobile

--- a/_sass/blog.scss
+++ b/_sass/blog.scss
@@ -6,8 +6,7 @@
     margin-top:10px;
     margin-bottom:10px;
     background-color:#FFF;
-    width: 25rem;
-    height: 25rem;
+    max-width: 100vw;
   }
 
   .blog-card:hover {
